--- a/hHYuanLing/src/main/res/layout/include_logintop.xml
+++ b/hHYuanLing/src/main/res/layout/include_logintop.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <RadioGroup
         android:id="@+id/tabs_rg"
@@ -11,7 +11,7 @@
         android:background="@drawable/common_tabbg"
         android:gravity="center"
         android:orientation="horizontal"
-        android:paddingTop="@dimen/padding_normal" >
+        android:paddingTop="@dimen/padding_normal">
 
         <RadioButton
             android:id="@+id/tg_login"
@@ -38,7 +38,8 @@
             android:singleLine="true"
             android:text="注册"
             android:textColor="@drawable/tabblue_selector"
-            android:textSize="@dimen/gj_d" />
+            android:textSize="@dimen/gj_d"
+            android:visibility="gone" />
     </RadioGroup>
 
 </LinearLayout>
