养护管理模块-->yqy

--- a/hHYuanLing/src/main/res/layout/acitivty_yhmanage.xml
+++ b/hHYuanLing/src/main/res/layout/acitivty_yhmanage.xml
@@ -8,8 +8,5 @@
     <ListView
         android:id="@+id/lv_yhmanage"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:layout_height="match_parent" />
 </RelativeLayout>
