--- a/hHYuanLing/src/main/res/layout/activity_myworkerlist_des.xml
+++ b/hHYuanLing/src/main/res/layout/activity_myworkerlist_des.xml
@@ -71,7 +71,7 @@
                     android:textSize="@dimen/gj_d" />
 
                 <TextView
-                    android:id="@+id/tv_details"
+                    android:id="@+id/tv_content"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@null"
