--- a/hHYuanLing/src/main/res/layout/activity_maintenance.xml
+++ b/hHYuanLing/src/main/res/layout/activity_maintenance.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true"
-    android:orientation="vertical"
-    android:scrollbars="none">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,63 +21,24 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="100dip"
+                    android:layout_width="120dip"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/padding_big"
-                    android:text="开工日期"
+                    android:text="植物编号"
                     android:textSize="@dimen/gj_d" />
 
                 <TextView
-                    android:id="@+id/tv_remarks"
+                    android:id="@+id/tv_code_maintenance"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:drawablePadding="@dimen/padding_normal"
-                    android:drawableRight="@drawable/icon_add"
-                    android:hint="请选择日期"
                     android:padding="@dimen/padding_big"
                     android:textColor="@color/text_color_c"
-                    android:textColorHint="@color/line"
                     android:textSize="@dimen/gj_d" />
 
             </LinearLayout>
 
             <View
-                android:layout_width="wrap_content"
-                android:layout_height="1dip"
-                android:background="@color/line"
-                android:visibility="gone" />
-
-            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:visibility="gone">
-
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="100dip"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/padding_big"
-                    android:text="完工日期"
-                    android:textSize="@dimen/gj_d" />
-
-                <TextView
-                    android:id="@+id/tv_time"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:hint="请选择日期"
-                    android:padding="@dimen/padding_big"
-                    android:textColor="@color/text_color_c"
-                    android:textColorHint="@color/line"
-                    android:textSize="@dimen/gj_d" />
-
-            </LinearLayout>
-
-
-            <View
-                android:layout_width="wrap_content"
                 android:layout_height="1dip"
                 android:background="@color/line" />
 
@@ -90,24 +48,89 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tv_wenjian"
+                    android:layout_width="120dip"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/padding_big"
+                    android:text="养护状态"
+                    android:textSize="@dimen/gj_d" />
+
+                <TextView
+                    android:id="@+id/tv_state_maintenance"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableRight="@drawable/icon_add"
                     android:padding="@dimen/padding_big"
-                    android:text="文件确认"
+                    android:textColor="@color/text_color_c"
                     android:textSize="@dimen/gj_d" />
 
             </LinearLayout>
 
             <View
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="1dip"
+                android:background="@color/line" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="120dip"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/padding_big"
+                    android:text="养护时间"
+                    android:textSize="@dimen/gj_d" />
+
+                <TextView
+                    android:id="@+id/tv_time_maintenance"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/padding_big"
+                    android:textColor="@color/text_color_c"
+                    android:textSize="@dimen/gj_d" />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dip"
+                android:background="@color/line" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="120dip"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/padding_big"
+                    android:text="养护地点"
+                    android:textSize="@dimen/gj_d" />
+
+                <TextView
+                    android:id="@+id/tv_address_maintenance"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/padding_big"
+                    android:textColor="@color/text_color_c"
+                    android:textSize="@dimen/gj_d" />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
                 android:layout_height="1dip"
                 android:background="@color/line" />
         </LinearLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dip"
+            android:background="@color/line" />
+
         <TextView
-            android:id="@+id/tv_sub"
+            android:id="@+id/tv_submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/padding_big"
@@ -117,7 +140,5 @@
             android:text="完成"
             android:textColor="@color/white"
             android:textSize="@dimen/gj_d" />
-
     </LinearLayout>
-
 </ScrollView>
