--- a/hHYuanLing/src/main/res/layout/activity_treemessage.xml
+++ b/hHYuanLing/src/main/res/layout/activity_treemessage.xml
@@ -1,203 +1,196 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/padding_normal"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp">
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="120dip"
                 android:layout_height="wrap_content"
-                android:text="植物编号：" />
+                android:padding="@dimen/padding_big"
+                android:text="植物编号"
+                android:textSize="@dimen/gj_d" />
 
             <TextView
-                android:id="@+id/tv_treeid_treemessage"
-                android:layout_width="wrap_content"
+                android:id="@+id/tv_code_treemessage"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="16sp" />
+                android:padding="@dimen/padding_big"
+                android:textColor="@color/text_color_c"
+                android:textSize="@dimen/gj_d" />
+
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="1dip"
             android:background="@color/line" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp">
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="120dip"
                 android:layout_height="wrap_content"
-                android:text="植物名称：" />
+                android:padding="@dimen/padding_big"
+                android:text="植物名称"
+                android:textSize="@dimen/gj_d" />
 
             <EditText
-                android:id="@+id/et_treename_treemessage"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_weight="1"
-                android:background="@drawable/editext_shape"
-                android:hint="请输入内容"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
+                android:id="@+id/et_name_treemessage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:hint="请输入植物名称"
+                android:padding="@dimen/padding_big"
                 android:textColor="@color/text_color_c"
                 android:textColorHint="@color/line"
-                android:textSize="16sp" />
+                android:textSize="@dimen/gj_d" />
+
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="1dip"
             android:background="@color/line" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp">
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="120dip"
                 android:layout_height="wrap_content"
-                android:text="植物用途：" />
+                android:padding="@dimen/padding_big"
+                android:text="植物用途"
+                android:textSize="@dimen/gj_d" />
 
             <EditText
-                android:id="@+id/et_treeuse_treemessage"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_weight="1"
-                android:background="@drawable/editext_shape"
-                android:hint="请输入内容"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
+                android:id="@+id/et_purpose_treemessage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:hint="请输入植物用途"
+                android:padding="@dimen/padding_big"
                 android:textColor="@color/text_color_c"
                 android:textColorHint="@color/line"
-                android:textSize="16sp" />
+                android:textSize="@dimen/gj_d" />
+
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="1dip"
             android:background="@color/line" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp">
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="120dip"
                 android:layout_height="wrap_content"
-                android:text="植物规格：" />
+                android:padding="@dimen/padding_big"
+                android:text="植物规格"
+                android:textSize="@dimen/gj_d" />
 
             <EditText
-                android:id="@+id/et_treespecification_treemessage"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_weight="1"
-                android:background="@drawable/editext_shape"
-                android:hint="请输入内容"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
+                android:id="@+id/et_specifications_treemessage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:hint="请输入植物规格"
+                android:padding="@dimen/padding_big"
                 android:textColor="@color/text_color_c"
                 android:textColorHint="@color/line"
-                android:textSize="16sp" />
+                android:textSize="@dimen/gj_d" />
+
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="1dip"
             android:background="@color/line" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp">
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="120dip"
                 android:layout_height="wrap_content"
-                android:text="种植地点：" />
+                android:padding="@dimen/padding_big"
+                android:text="种植地点"
+                android:textSize="@dimen/gj_d" />
 
             <TextView
-                android:id="@+id/tv_treesite_treemessage"
-                android:layout_width="wrap_content"
+                android:id="@+id/tv_address_treemessage"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="16sp" />
+                android:padding="@dimen/padding_big"
+                android:textColor="@color/text_color_c"
+                android:textSize="@dimen/gj_d" />
+
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="1dip"
             android:background="@color/line" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp">
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="120dip"
                 android:layout_height="wrap_content"
-                android:text="录入时间：" />
+                android:padding="@dimen/padding_big"
+                android:text="录入时间"
+                android:textSize="@dimen/gj_d" />
 
             <TextView
-                android:id="@+id/tv_treetime_treemessage"
-                android:layout_width="wrap_content"
+                android:id="@+id/tv_time_treemessage"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="16sp" />
+                android:padding="@dimen/padding_big"
+                android:textColor="@color/text_color_c"
+                android:textSize="@dimen/gj_d" />
+
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="1dip"
             android:background="@color/line" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tv_submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/padding_big"
+            android:background="@drawable/btn_bluecircleframe"
             android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="@dimen/padding_normal">
-
-            <Button
-                android:id="@+id/btn_submit_treemessage"
-                android:layout_width="0dip"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/shape_blue_botton"
-                android:text="提交"
-                android:textColor="@color/white"
-                android:textSize="@dimen/gj_d" />
-
-            <Button
-                android:id="@+id/btn_cancel_treemessage"
-                android:layout_width="0dip"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/padding_normal"
-                android:layout_weight="1"
-                android:background="@drawable/shape_yellow_botton"
-                android:text="取消"
-                android:textColor="@color/white"
-                android:textSize="@dimen/gj_d" />
-        </LinearLayout>
+            android:padding="@dimen/padding_big"
+            android:text="完成"
+            android:textColor="@color/white"
+            android:textSize="@dimen/gj_d" />
     </LinearLayout>
 </ScrollView>
