--- a/hHYuanLing/src/main/res/layout/item_poject_money.xml
+++ b/hHYuanLing/src/main/res/layout/item_poject_money.xml
@@ -11,7 +11,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_data"
+            android:id="@+id/tv_remarks"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="3"
