--- a/hHYuanLing/src/main/res/layout/list_item_maintenace.xml
+++ b/hHYuanLing/src/main/res/layout/list_item_maintenace.xml
@@ -3,93 +3,82 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:gravity="center"
     android:orientation="vertical"
-    android:paddingLeft="12dp"
-    android:paddingRight="12dp"
-    android:paddingTop="8dp">
+    android:padding="@dimen/padding_normal">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingBottom="5dp"
-        android:paddingTop="5dp">
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_place_yanghuitem"
+            android:id="@+id/tv_address_item"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="8"
+            android:layout_weight="2"
             android:ellipsize="end"
             android:maxLines="2"
             android:text="养护地点"
-            android:textSize="@dimen/gj_g" />
+            android:textSize="@dimen/gj_f" />
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="5">
+            android:layout_weight="1">
 
             <TextView
-                android:id="@+id/tv_behavior_yanghuitem"
+                android:id="@+id/tv_state_item"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ellipsize="end"
-                android:gravity="right"
+                android:gravity="center"
                 android:lines="1"
-                android:paddingRight="8dp"
-                android:text="养护行为"
+                android:text="养护状态"
                 android:textColor="@color/blue"
-                android:textSize="@dimen/gj_f" />
+                android:textSize="@dimen/gj_c" />
 
             <TextView
-                android:id="@+id/btn_write_yanghuitem"
-                android:layout_width="70dp"
+                android:id="@+id/tv_write_item"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/shape_gh_botton"
                 android:gravity="center"
                 android:lines="1"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp"
+                android:padding="@dimen/padding_normal"
                 android:text="管护"
                 android:textColor="@color/blue"
-                android:textSize="@dimen/gj_f" />
+                android:textSize="@dimen/gj_c" />
         </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingBottom="5dp"
-        android:paddingTop="5dp">
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_treeid_yanghuitem"
+            android:id="@+id/tv_code_item"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ellipsize="end"
-            android:gravity="left|center_vertical"
             android:lines="1"
             android:text="植物二维码"
             android:textColor="@color/light_gray"
-            android:textSize="@dimen/gj_f" />
+            android:textSize="@dimen/gj_c" />
 
         <TextView
-            android:id="@+id/tv_time_yanghuitem"
+            android:id="@+id/tv_time_item"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ellipsize="end"
-            android:gravity="right|center_vertical"
+            android:gravity="right"
             android:lines="1"
             android:text="2017-04-05 16:23"
             android:textColor="@color/light_gray"
-            android:textSize="@dimen/gj_f" />
+            android:textSize="@dimen/gj_c" />
     </LinearLayout>
 </LinearLayout>
