--- a/hHYuanLing/src/main/res/layout/activity_yhdata.xml
+++ b/hHYuanLing/src/main/res/layout/activity_yhdata.xml
@@ -274,7 +274,8 @@
                 <ImageView
                     android:id="@+id/iv_before"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="200dp"
+                    android:layout_margin="@dimen/padding_normal"
                     android:scaleType="centerCrop" />
             </LinearLayout>
 
@@ -297,7 +298,8 @@
                 <ImageView
                     android:id="@+id/iv_after"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="200dp"
+                    android:layout_margin="@dimen/padding_normal"
                     android:scaleType="centerCrop" />
             </LinearLayout>
         </LinearLayout>
