--- a/hHYuanLing/src/main/res/layout/acitivty_yhmanage.xml
+++ b/hHYuanLing/src/main/res/layout/acitivty_yhmanage.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -9,4 +9,4 @@
         android:id="@+id/lv_yhmanage"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</RelativeLayout>
+</LinearLayout>
