修改调试界面，接口地址与接口参数-->yqy

--- a/hHYuanLing/src/main/res/layout/activity_debug_setup.xml
+++ b/hHYuanLing/src/main/res/layout/activity_debug_setup.xml
@@ -9,26 +9,44 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingBottom="20dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="20dp">
+        android:padding="@dimen/padding_normal">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:padding="@dimen/padding_normal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="主机地址:"
-                android:textSize="17sp" />
+                android:textSize="@dimen/gj_f" />
 
             <EditText
                 android:id="@+id/et_host"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_comment" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:padding="@dimen/padding_normal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="慧正地址:"
+                android:textSize="@dimen/gj_f" />
+
+            <EditText
+                android:id="@+id/et_hz_host"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_comment" />
         </LinearLayout>
 
         <LinearLayout
