修改需求发布人才招聘模块的BUG^_^-->yqy

--- a/hHYuanLing/src/main/res/layout/activity_recruitdetail.xml
+++ b/hHYuanLing/src/main/res/layout/activity_recruitdetail.xml
@@ -22,6 +22,39 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/tv_tp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="@dimen/padding_normal"
+                android:text="招聘性质"
+                android:textColor="@color/red"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tv_characters"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="@dimen/padding_normal"
+                android:text="工作性质"
+                android:textColor="#458AD8"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dip"
+            android:background="@color/line" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
                 android:id="@+id/tv_positions"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
