--- a/hHYuanLing/src/main/res/layout/item_recruit.xml
+++ b/hHYuanLing/src/main/res/layout/item_recruit.xml
@@ -9,20 +9,19 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tv_type"
+            android:id="@+id/tv_tp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxEms="10"
             android:singleLine="true"
-            android:text="类型"
+            android:text="招聘性质"
             android:textColor="@color/red"
             android:textSize="@dimen/gj_f" />
 
@@ -77,15 +76,26 @@
 
     <LinearLayout
         android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_characters"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxEms="10"
+            android:singleLine="true"
+            android:text="工作性质"
+            android:textColor="#458AD8"
+            android:textSize="@dimen/gj_c" />
 
         <TextView
             android:id="@+id/tv_contact"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:background="@drawable/tel_shape"
             android:ellipsize="end"
             android:padding="@dimen/padding_normal"
@@ -109,6 +119,7 @@
             android:id="@+id/tv_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:ellipsize="end"
             android:singleLine="true"
             android:text="2017-03-15 10:20"
