修改人才招聘界面-->yqy

--- a/hHYuanLing/src/main/res/layout/item_recruit.xml
+++ b/hHYuanLing/src/main/res/layout/item_recruit.xml
@@ -2,22 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:padding="@dimen/padding_normal">
+    android:orientation="vertical">
     <!--人员招聘Item-->
 
+    <!--招聘-->
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="@dimen/padding_normal">
 
         <TextView
             android:id="@+id/tv_tp"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:ellipsize="end"
             android:maxEms="10"
             android:singleLine="true"
@@ -26,10 +26,39 @@
             android:textSize="@dimen/gj_f" />
 
         <TextView
-            android:id="@+id/tv_positions"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_characters"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/padding_normal"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:gravity="right"
+            android:maxEms="10"
+            android:paddingRight="@dimen/padding_normal"
+            android:singleLine="true"
+            android:text="工作性质"
+            android:textColor="#458AD8"
+            android:textSize="@dimen/gj_c" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_companyName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/padding_normal"
+        android:text="企业名称"
+        android:textSize="@dimen/gj_f" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="@dimen/padding_normal">
+
+        <TextView
+            android:id="@+id/tv_positions"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:ellipsize="end"
             android:maxEms="10"
             android:singleLine="true"
@@ -38,93 +67,33 @@
             android:textSize="@dimen/gj_f" />
 
         <TextView
-            android:id="@+id/tv_companyName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/padding_normal"
-            android:ellipsize="end"
-            android:maxEms="14"
-            android:singleLine="true"
-            android:text="企业名称"
-            android:textColor="@color/text_color_b"
-            android:textSize="@dimen/gj_c" />
-
-        <TextView
-            android:id="@+id/tv_workAdress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/padding_normal"
-            android:ellipsize="end"
-            android:maxEms="14"
-            android:singleLine="true"
-            android:text="工作地点"
-            android:textColor="@color/text_color_b"
-            android:textSize="@dimen/gj_c" />
-
-        <TextView
             android:id="@+id/tv_money"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/padding_normal"
+            android:layout_weight="1"
             android:ellipsize="end"
+            android:gravity="right"
             android:maxEms="14"
             android:singleLine="true"
             android:text="月薪"
             android:textColor="#458AD8"
             android:textSize="@dimen/gj_c" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="120dp"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tv_characters"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxEms="10"
-            android:singleLine="true"
-            android:text="工作性质"
-            android:textColor="#458AD8"
-            android:textSize="@dimen/gj_c" />
-
-        <TextView
-            android:id="@+id/tv_contact"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/tel_shape"
-            android:ellipsize="end"
-            android:padding="@dimen/padding_normal"
-            android:singleLine="true"
-            android:text="联系人"
-            android:textColor="#CD2626"
-            android:textSize="@dimen/gj_c" />
-
-        <TextView
-            android:id="@+id/tv_tel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:text="联系电话"
-            android:textColor="@color/text_color_b"
-            android:textSize="@dimen/gj_c" />
 
         <TextView
             android:id="@+id/tv_date"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_weight="1"
             android:ellipsize="end"
+            android:gravity="right"
             android:singleLine="true"
             android:text="2017-03-15 10:20"
             android:textColor="@color/text_color_b"
             android:textSize="@dimen/gj_c" />
-
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="@color/line" />
 </LinearLayout>
